# CrewAI-Teaching-FlowAgent

./: README.md  Teaching.txt  pyproject.toml
src/flow_exp_orches/: main.py
src/flow_exp_orches/crews/poem_crew/: poem_crew.py
src/flow_exp_orches/crews/poem_crew/config/: tasks.yaml
