[project]
name = "flow_exp_orches"
version = "0.1.0"
description = "flow-exp-orches using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0",
]

[project.scripts]
kickoff = "flow_exp_orches.main:kickoff"
plot = "flow_exp_orches.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
